--- a/views/contratos.html
+++ b/views/contratos.html
@@ -6,18 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="/css/styles.2abd6b7e14fc96816fac.css"></head>
 <body>
   <app-root></app-root>
-<script src="/js/runtime-es2015.js" type="module"></script>
-<script src="/js/runtime-es5.js" nomodule defer></script>
-<script src="/js/polyfills-es5.js" nomodule defer></script>
-<script src="/js/polyfills-es2015.js" type="module"></script>
-<script src="/js/styles-es2015.js" type="module"></script>
-<script src="/js/styles-es5.js" nomodule defer></script>
-<script src="/js/vendor-es2015.js" type="module"></script>
-<script src="/js/vendor-es5.js" nomodule defer></script>
-<script src="/js/main-es2015.js" type="module"></script>
-<script src="/js/main-es5.js" nomodule defer></script>
-</body>
+<script src="/js/runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="/js/runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="/js/polyfills-es5.2e99a6fe56296fe60f2d.js" nomodule defer></script><script src="/js/polyfills-es2015.12dd4be351bc232e11d5.js" type="module"></script><script src="/js/main-es2015.c99824834ed6c957b93a.js" type="module"></script><script src="/js/main-es5.c99824834ed6c957b93a.js" nomodule defer></script></body>
 </html>
